--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,13 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          ref: ${{github.event.pull_request.head.ref}}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Set Up Python 3.8
         uses: actions/setup-python@v2
@@ -26,8 +28,14 @@ jobs:
 
       - name: Run flake8
         run: flake8 app/
-
       - name: Run tests
-        timeout-minutes: 5
         run: pytest tests/
+      - uses: mate-academy/auto-approve-action@v2
+        if: ${{ github.event.pull_request && success() }}
+        with:
+          github-token: ${{ github.token }}
+      - uses: mate-academy/auto-reject-action@v2
+        if: ${{ github.event.pull_request && failure() }}
+        with:
+          github-token: ${{ github.token }}
 
